# Expflow

./: .config-reference-reconciliation.yaml  .editorconfig  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_DEV.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.test.json  vitest.config.ts
.github/workflows/: phase-1-contract.yml  release.yml
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
.reasonix/attachments/: clipboard-20260716-053616.083346-000001.md
Expflow-UX-Test/: UX_FLOW_REPORT.md  V1.1.0_VERIFICATION_REPORT.md  V1.1.1_GATE_REVIEW.md
apps/: README.md
apps/gui/: README.md  index.html  server.mjs  styles.css
build-docs/: Expflow-Gate-D-Hardening-PR-Review.md
build-docs/Expflow-Codex-Workflow-Package-v2.3/: EXPFLOW_WORKFLOW_CURRENT.md  README.md  (+2 more)
docs/: ARCHITECTURE_DECISIONS.md  AUTHORITY_AND_SEMANTIC_MODEL.md  CODEX_BUILD_PLAN.md  CURRENT_STATUS_MATRIX.md  DATA_MODEL.md  ERROR_REGISTRY.md  EXTENSION_BOUNDARY.md  GLOSSARY.md  IDENTITY_AND_REVISION_MODEL.md  MATERIAL_RECORD_FORMAT.md  MVP_SCOPE.md  PROTOCOL_CORE_SPEC.md  PR_5_GATE_C_ARCHITECTURE_REVIEW.md  README.md  RELEASE_PUBLISHING.md  REPOSITORY_DIRECTORY_STRUCTURE.md  SECURITY_MODEL.md  STORAGE_AND_RECOVERY.md  TEST_MATRIX.md  V1_COMPATIBILITY.md  V2_3_REVIEW_RESOLUTION.md  WORKFLOW_AND_PROJECTION_MODEL.md
examples/: README.md  authority-document-unified.example.json  authority-source.example.json  equivalence-evaluation.example.json  manifest-revision-deterministic.example.json  manifest-revision-model.example.json  operation-plan.example.json  regeneration-attempt.example.json  source-correspondence.example.json  tree-revision.example.json  virtual-artifact.example.json
registries/: README.md  core-contracts.json  decision-vectors.json
schemas/: README.md  artifact-cluster.schema.json  authority-source.schema.json  hook-envelope.schema.json  materialization-event.schema.json  operation-plan.schema.json  regeneration-attempt.schema.json  reuse-result.schema.json  semantic-decision.schema.json  source-correspondence.schema.json  source-registration-decision.schema.json  tree-entry.schema.json  virtual-artifact.schema.json
src/: README.md  index.ts
tests/: README.md
tools/: check-config-references.ts  check-protected-surfaces.ts  check-skill-contracts.ts
(+353 files in other folders)
