[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "expflow-hooks"
version = "1.0.0"
description = "Expflow Python hook package - schema-conforming validation and automation hooks"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"

[project.urls]
Repository = "https://github.com/paragon-ux/Expflow"
Issues = "https://github.com/paragon-ux/Expflow/issues"

[project.optional-dependencies]
dev = [
    "jsonschema>=4.23.0",
    "pytest>=8.3.0",
    "build>=1.2.0",
    "twine>=6.1.0",
]

[tool.setuptools.packages.find]
where = ["python"]
include = ["expflow_hooks*"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
